# otus_python

./: README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml  requirements.txt
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
homework_06/app/: app.py  forms.py  get_data.py  prestart.sh
homework_06/app/migrations/versions/: 64be0c7a3e41_create_db.py  eb9943ed9bc4_create_table.py
homework_06/app/models/: __init__.py  database.py  post.py  user.py
homework_06/app/templates/: base.html  create_post.html  create_user.html  index.html  views_post.html
homework_06/app/templates/components/: card.html  navbar.html  post.html
homework_07/games/: admin.py  models.py
homework_07/rent/: urls.py
homework_08/games/: admin.py  models.py  urls.py  views.py
homework_09/: pyproject.toml
homework_09/games/: views.py
homework_09/games/migrations/: 0001_initial.py
homework_09/games/templates/games/: game_list.html
homework_09/games/tests/: test_models.py  test_views.py
homework_09/rent/: settings.py  urls.py
homework_09/templates/components/: navbar.html
homework_09/users/: forms.py  models.py  urls.py  views.py
homework_09/users/migrations/: 0001_initial.py
homework_09/users/templates/users/: login.html  profile.html  register.html
(+6 files in other folders)
