[tool.poetry]
name = "homework-06"
version = "0.1.0"
description = ""
authors = ["Dmitry <i@dkisel.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
psycopg = "^3.1.19"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
