[tool.poetry]
name = "rent-game"
version = "0.1.0"
description = ""
authors = ["dmkisel <i@dkisel.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
faker = "^26.0.0"
psycopg = "^3.1.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
